--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         },
         {
             "src": "/products",
-            "dest": "/products"
+            "dest": "/products.js"
         }
     ]
 }
